--- a/src/components/get-started/appsco-tutorial.html
+++ b/src/components/get-started/appsco-tutorial.html
@@ -91,8 +91,9 @@
         ></appsco-tutorial-provisioning>
 
         <div id="done-all-tutorials" class="done-step" hidden>
-            <p>You have completed all getting started steps. <br />
-                You can re-watch them and find the links to all support articles here. </p>
+            <p>You have completed all Get started steps. <br />
+                You can replay them and refer to the linked articles on the welcome page to learn more.
+            </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
