--- a/src/components/get-started/appsco-tutorial-company-domain.html
+++ b/src/components/get-started/appsco-tutorial-company-domain.html
@@ -30,17 +30,21 @@
             }
         </style>
         <div id="step-1" class="step" hidden>
-            <p>To get started - open the company menu.</p>
+            <p>Verifying the company domain is an advanced feature.<br>
+                You might need help to complete this process.<br>
+                Open the company menu to get started.
+            </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
+                    <paper-button on-tap="_readMore">Read more</paper-button>
                     <paper-button on-tap="_nextStep">Next</paper-button>
                 </div>
             </div>
         </div>
 
         <div id="step-2" class="step" hidden>
-            <p>You can add a company domain in Settings.</p>
+            <p>You can add the company domain here.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -50,7 +54,7 @@
         </div>
 
         <div id="step-3" class="step" hidden>
-            <p>Go to Domains to add and verify a company domain.</p>
+            <p>Go to Domains to add and verify the company domain.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -60,7 +64,7 @@
         </div>
 
         <div id="step-4" class="step" hidden style="position: absolute">
-            <p>Add your company's domain.</p>
+            <p>To add your company domain, click here.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -70,7 +74,7 @@
         </div>
 
         <div id="step-5" class="step" hidden>
-            <p>Enter your domain and click Add when you're done</p>
+            <p>Enter your company domain and click ADD.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -80,10 +84,9 @@
         </div>
 
         <div id="step-6" class="step" hidden>
-            <p>Once the domain is added, you will have to verify your <br />
-                ownership over this domain. This process have several <br />
-                steps and you might need help to complete them. Click <br />
-                Get token to continue.</p>
+            <p>Once the domain is added, you will have to verify the ownership. <br />
+                Refer to the linked articles on the welcome page to learn more. <br />
+                Click on Get token to continue with the tutorial.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -93,12 +96,11 @@
         </div>
 
         <div id="step-7" class="step" hidden>
-            <p>You will have to copy and paste the verification <br />
-                token to your DNS records as a TXT record. Only <br />
-                when this step is completed, can you verify the <br />
-                domain. You can read more about the domain <br />
-                verification in the linked articles. Click <br />
-                here to continue with the tutorial.</p>
+            <p>Copy and paste the verification token to your DNS as a TXT record. <br />
+                Once this step is completed, you can verify the domain. <br />
+                Refer to the linked articles on the welcome page to read more. <br />
+                Click on NEXT to continue with the tutorial.
+            </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -108,10 +110,8 @@
         </div>
 
         <div id="step-8" class="step" hidden>
-            <p> If you have completed the previous step, <br />
-                click Verify to verify your domain. It might <br />
-                take up to 24 hours until the DNS is refreshed <br />
-                and the domain is verified.
+            <p> If you completed the previous step, click on VERIFY to verify your domain. <br />
+                It may take up to 24 hours before DNS is refreshed and your domain verified.
             </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
@@ -122,13 +122,14 @@
         </div>
 
         <div id="step-9" class="step" hidden>
-            <p>You have now learned how to verify your <br />
-                company's domain. To continue with Getting <br />
-                started tutorial, open the company menu.
+            <p>You have seen how to verify your company domain. <br />
+                Refer to the linked articles to learn more. <br />
+                Open the company menu to continue with the Get started tutorial.
             </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
+                    <paper-button on-tap="_readMore">Read more</paper-button>
                     <paper-button on-tap="_nextStep">Done</paper-button>
                 </div>
             </div>
@@ -138,6 +139,10 @@
         Polymer({
 
             is: 'appsco-tutorial-company-domain',
+
+            _readMore: function () {
+                window.open(this.readme, '_blank');
+            },
 
             property: {
                 page: {
@@ -198,7 +203,7 @@
                         reference: '* /deep/ appsco-company-page-actions /deep/ #companySettingsAddDomain',
                         coverTarget: '* /deep/ appsco-company-page-actions /deep/ #companySettingsAddDomain',
                         popperOptions: {
-                            placement: 'left'
+                            placement: 'left-start'
                         }
                     },
                     step5: {
