--- a/src/components/get-started/appsco-tutorial-provisioning.html
+++ b/src/components/get-started/appsco-tutorial-provisioning.html
@@ -35,44 +35,45 @@
             }
         </style>
         <div id="step-1" class="step" hidden>
-            <p>
-                Provisioning - Add integrations with other systems <br />
-                Provisioning helps you automate the on-boarding <br />
-                and off-boarding process of your users and contacts <br />
-                while providing better monitoring of access rights <br />
-                and resource security. AppsCo supports integrations <br />
-                with several systems. Depending on your company's <br />
-                needs you can set up integration from external system <br />
-                to AppsCo, or from AppsCo to other system. By setting <br />
-                up integration rules you can simplify and automate <br />
-                adding, modifying and removing of users and their access <br />
-                to different systems. <br />
-                <br />
-                To learn more about the Provisioning, <br /> please visit our
-                <a href="[[ readme ]]" target="_blank" class="knowledge-base-link">
-                    Knowledge Base.
-                </a>
+            <p style="padding: 10px;">
+                Provisioning refers to adding integrations with the other systems<br>
+                in order to automate onboarding and offboarding of users and contacts <br/>
+                while providing better control over access rights and resource security. <br>
+                <br>
+                AppsCo supports integrations with several systems and, depending on your company needs, <br/>
+                you can set up integrations from external systems to AppsCo or the other way around. <br>
+                <br>
+                Setting up integration rules allows you to automate adding, <br/>
+                modifying and removing users and clients and their access rights to different systems. <br>
+                Refer to the linked articles to learn more.
+
             </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
+                    <paper-button on-tap="_readMore">Read more</paper-button>
                     <paper-button on-tap="_nextStep">Close</paper-button>
                 </div>
             </div>
         </div>
 
         <div id="step-2" class="step" hidden>
-            <p>To get started - open the company menu.</p>
+            <p>
+                Setting up Provisioning is an advanced feature.<br/>
+                You might need help to complete this process.<br/>
+                Open the company menu to get started.
+            </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
+                    <paper-button on-tap="_readMore">Read more</paper-button>
                     <paper-button on-tap="_nextStep">Next</paper-button>
                 </div>
             </div>
         </div>
 
         <div id="step-3" class="step" hidden>
-            <p>Choose Provisioning from the menu.</p>
+            <p>You can add integrations here.</p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -83,10 +84,7 @@
 
         <div id="step-4" class="step" hidden>
             <p>
-                To create a new integration, click Add. Provisioning <br />
-                is an advanced feature so you might need help to complete <br />
-                the process. You can always read our knowledge base articles <br />
-                if you need more information.
+                To create a new integration, click on ADD.
             </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
@@ -107,8 +105,9 @@
         </div>
 
         <div id="step-6" class="step" hidden>
-            <p>Provide the necessary information in order to configure an <br />
-                integration. Click Add when you're done.</p>
+            <p>
+                Fill in the necessary information to configure an integration and click ADD.
+            </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
@@ -118,15 +117,15 @@
         </div>
 
         <div id="step-7" class="step" hidden>
-            <p>You have now learned how to add an integration. <br />
-                Next step is to configure integration rules and web hooks <br />
-                once the integration has been added. As this setup can vary <br />
-                depending on your company's needs we suggest you read our <br />
-                support tutorial on this topic.
+            <p>You have seen how to add an integration.<br />
+                The next step is to configure integration rules and webhooks, <br />
+                once the integration is added.  <br />
+                Refer to the linked articles to learn more.
             </p>
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
+                    <paper-button on-tap="_readMore">Read more</paper-button>
                     <paper-button on-tap="_nextStep">Done</paper-button>
                 </div>
             </div>
@@ -136,6 +135,10 @@
         Polymer({
 
             is: 'appsco-tutorial-provisioning',
+
+            _readMore: function () {
+                window.open(this.readme, '_blank');
+            },
 
             property: {
                 page: {
@@ -172,7 +175,7 @@
             getPopperConfig: function() {
                 return {
                     step1: {
-                        reference: '* /deep/ appsco-tutorial-provisioning /deep/ #step-1',
+                        reference: 'body',
                         coverTarget: '* /deep/ appsco-tutorial-provisioning /deep/ #step-1',
                         popperOptions: {
                             placement: 'right-start'
