--- a/src/components/get-started/appsco-tutorial-provisioning.html
+++ b/src/components/get-started/appsco-tutorial-provisioning.html
@@ -36,9 +36,9 @@
         </style>
         <div id="step-1" class="step" hidden>
             <p style="padding: 10px;">
-                Provisioning refers to adding integrations with the other systems<br>
-                in order to automate onboarding and offboarding of users and contacts <br/>
-                while providing better control over access rights and resource security. <br>
+                Provisioning refers to adding integrations with the other systems in order to automate <br/>
+                onboarding and offboarding of users and contacts while providing better control <br/>
+                over access rights and resource security. <br>
                 <br>
                 AppsCo supports integrations with several systems and, depending on your company needs, <br/>
                 you can set up integrations from external systems to AppsCo or the other way around. <br>
