--- a/src/components/get-started/appsco-tutorial-resources.html
+++ b/src/components/get-started/appsco-tutorial-resources.html
@@ -177,7 +177,7 @@
                         reference: '* /deep/ #appscoResourcesPageActions /deep/ #resourcesActionList > paper-item:nth-child(2)',
                         coverTarget: '* /deep/ #appscoResourcesPageActions /deep/ #resourcesActionList > paper-item:nth-child(2)',
                         popperOptions: {
-                            placement: 'left'
+                            placement: 'left-start'
                         }
                     },
                     step5: {
