--- a/src/components/get-started/appsco-tutorial-share-resources.html
+++ b/src/components/get-started/appsco-tutorial-share-resources.html
@@ -189,21 +189,21 @@
                         reference: '* /deep/ appsco-application-actions /deep/ #shareAction',
                         coverTarget: '* /deep/ appsco-application-actions /deep/ #shareAction',
                         popperOptions: {
-                            placement: 'left'
+                            placement: 'left-start'
                         }
                     },
                     step5: {
                         reference: '* /deep/ appsco-share-resource /deep/ paper-dialog#dialog appsco-account-list-item  /deep/ div.select-action',
                         coverTarget: '* /deep/ appsco-share-resource /deep/ paper-dialog#dialog appsco-account-list-item',
                         popperOptions: {
-                            placement: 'right'
+                            placement: 'right-start'
                         }
                     },
                     step6: {
                         reference: '* /deep/ appsco-share-resource /deep/ paper-dialog#dialog #shareResourceConfirmShareButton',
                         coverTarget: '* /deep/ appsco-share-resource /deep/ paper-dialog#dialog #shareResourceConfirmShareButton',
                         popperOptions: {
-                            placement: 'right'
+                            placement: 'right-start'
                         }
                     },
                     step7: {
